Record AV: No longer easy to right-align videos #430556

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@
 }
 
 .que.recordrtc .video-widget {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     max-width: 100%;
 }
